Dodat spring security, kao i endpointi za registraciju i login.